# brawley-productivity-tool

./: .gitignore  README.md  SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
docs/: RELEASING.md
scripts/: gen-icon.mjs
src/: App.tsx  CapturePane.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AppModals.tsx  BreakdownModal.tsx  BulkBar.tsx  CaptureBar.tsx  CommandPalette.tsx  GoalDeadlineDialog.tsx  GoalModal.tsx  Onboarding.tsx  PlanDayModal.tsx  Sidebar.tsx  TaskBoard.tsx  TaskCard.tsx  TaskDetailPanel.tsx  ViewShell.tsx  charts.tsx  dnd.tsx  icons.tsx
src/components/ui/: primitives.tsx
src/db/: driver.ts  migrate.ts  repo.ts
src/db/migrations/: 001_init.sql  002_calendar.sql
src/lib/: actions.ts  collision.ts  native.ts  notifications.ts  recurrence.ts  shortcuts.ts  updater.ts  updates.ts  util.ts
src/stores/: data.ts  selectors.ts  settings.ts  ui.ts
src/views/: ArchiveView.tsx  CalendarView.tsx  GoalView.tsx  InboxView.tsx  InsightsView.tsx  ProjectView.tsx  ReviewView.tsx  ReviewWizard.tsx  SettingsView.tsx  SprintView.tsx  TodayView.tsx  stubs.tsx
