[package]
name = "flow"
version = "0.1.0"
description = "Flow — the calm personal task manager"
authors = ["Katrina"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
dirs = "5"

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
